--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <header><h1>SEA BATTLE</h1></header>
     <div id="root"></div>
+    <form>
+        <button class="buttonStart">START GAME</button>
+    </form>
+    <h3></h3>
     <script src="./index.js"></script>
+
 
 </body>
 
