--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header><h1>SEA BATTLE</h1></header>
     <div id="root"></div>
-    <form>
+    <div class="wrapper">
         <button class="buttonStart">START GAME</button>
-    </form>
+    </div>
     <h3></h3>
     <script src="./index.js"></script>
 
